objects/Campaign.object
<CustomObject>
    <sharingModel>FullAccess</sharingModel>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Field Event</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Handraiser</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Demand Gen</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Trial Abandoner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Topic__c</fullName>
        <label>Campaign Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Career Development</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Customer Centricity</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Digital Transformation</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Prioritization</fullName>
                </value>
                <value>
                    <fullName>Product - Contact</fullName>
                </value>
                <value>
                    <fullName>Product - Covid</fullName>
                </value>
                <value>
                    <fullName>Product - CS Webinar</fullName>
                </value>
                <value>
                    <fullName>Product - Demo</fullName>
                </value>
                <value>
                    <fullName>Product Discovery</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Product Excellence</fullName>
                </value>
                <value>
                    <fullName>Product Leadership</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Product - Portal</fullName>
                </value>
                <value>
                    <fullName>Product - Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Research</fullName>
                </value>
                <value>
                    <fullName>Product Strategy</fullName>
                </value>
                <value>
                    <fullName>Product - Trial</fullName>
                </value>
                <value>
                    <fullName>Roadmaps</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Sales Outbound</fullName>
                </value>
                <value>
                    <fullName>Team Member Invite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Topic__c</fullName>
        <label>Campaign Sub Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Jira</fullName>
                </value>
                <value>
                    <fullName>Product Discovery</fullName>
                </value>
                <value>
                    <fullName>Product Excellence</fullName>
                </value>
                <value>
                    <fullName>Product-led Growth</fullName>
                </value>
                <value>
                    <fullName>Product Research</fullName>
                </value>
                <value>
                    <fullName>Product Strategy</fullName>
                </value>
                <value>
                    <fullName>Remote Work</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Skill Development</fullName>
                </value>
                <value>
                    <fullName>State of Product Excellence</fullName>
                </value>
                <value>
                    <fullName>Best Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_s_Journey_Stage__c</fullName>
        <label>Buyer&apos;s Journey Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Campaign_Hierarchy_Level__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top of Funnel</fullName>
                </value>
                <value>
                    <fullName>Middle of Funnel</fullName>
                </value>
                <value>
                    <fullName>Bottom of Funnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grand_Parent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grand Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Grand Parent Campaign)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Added_To_Campaign__c</fullName>
        <description>Date first added to the campaign. (test)</description>
        <label>Date Added To Campaign</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Hierarchy_Level__c</fullName>
        <label>Campaign Hierarchy Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Grand Parent</fullName>
                </value>
                <value>
                    <fullName>Ultimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Company_Segment__c</fullName>
        <label>Intended Company Segment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ESB</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>Upmarket</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>campaign_intended_persona__c</fullName>
        <label>Campaign Intended Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Product Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_From_Sales_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Exclude campaign members from sales routing</inlineHelpText>
        <label>Exclude From Sales Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_non_relative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign (non-relative)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Parent Campaign (non-relative)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Templates</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Template</value>
        </filters>
        <label>Templates</label>
    </listViews>
    <listViews>
        <fullName>Chat_Campaigns</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>startsWith</operation>
            <value>ch</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Chat</value>
        </filters>
        <label>Chat Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Ultimate_Parents</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Ultimate</value>
        </filters>
        <label>Ultimate Parents</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Response_Type__c</field>
            <operation>notEqual</operation>
            <value>Handraiser,Trial,Demand Gen,Operational,Portal,Trial Abandoner</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Responses,Unspecified</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Campaign_Topic__c</columns>
        <columns>Campaign_Sub_Topic__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Campaign_Hierarchy_Level__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
</CustomObject>